# simplug

./: .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  AGENTS.md  README.md  README.rst  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  simplug.py  tox.ini
.github/workflows/: build.yml  docs.yml
api/simplug/: index.html
api/source/simplug/: index.html
docs/: examples.md  getting-started.md  index.md  requirements.txt
docs/guide/: async-hooks.md  defining-hooks.md  entrypoints.md  implementing-hooks.md  plugin-registry.md  priority-system.md  result-collection.md
examples/: index.html  toy.py
examples/complete/: AGENTS.md  __main__.py  hookspecs.py  host.py  lib.py  plugin.py
examples/complete/plugin/: plugin.py  setup.py
getting-started/: index.html
guide/async-hooks/: index.html
guide/defining-hooks/: index.html
guide/entrypoints/: index.html
guide/implementing-hooks/: index.html
guide/plugin-registry/: index.html
guide/priority-system/: index.html
guide/result-collection/: index.html
search/: search_index.json
simplug/: __init__.py
tests/: plugin_module.py  test_simplug.py
tests/entrypoint_plugin/: entrypoint_plugin.py  setup.py
