[tool.poetry]
name = "simplug"
version = "0.3.1"
description = "A simple plugin system for python with async hooks supported"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
homepage = "https://github.com/pwwang/simplug"
repository  = "https://github.com/pwwang/simplug"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
diot = "^0.2"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^4"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "union-attr"]
show_error_codes = true
strict_optional = false

[tool.pytest.ini_options]
addopts = "-vv -p no:asyncio --cov=simplug --cov-report xml:.coverage.xml --cov-report term-missing"
# addopts = "-vv -p no:asyncio"
console_output_style = "progress"
filterwarnings = [
    # "error"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
