[tool.poetry]
name = "simplug"
version = "0.5.5"
description = "A simple plugin system for python with async hooks supported"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
homepage = "https://github.com/pwwang/simplug"
repository  = "https://github.com/pwwang/simplug"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
diot = "^0.3"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-cov = "^5"
setuptools = "^68"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "union-attr"]
show_error_codes = true
strict_optional = false

[tool.pytest.ini_options]
addopts = "-vv -p no:asyncio --cov=simplug --cov-report xml:.coverage.xml --cov-report term-missing"
# addopts = "-vv -p no:asyncio"
console_output_style = "progress"
filterwarnings = [
    # "error"
]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
