[project]
name = "simplug"
version = "0.5.6"
description = "A simple plugin system for python with async hooks supported"
authors = [{name = "pwwang", email = "pwwang@pwwang.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "diot>=0.3",
]

[project.urls]
Homepage = "https://github.com/pwwang/simplug"
Repository = "https://github.com/pwwang/simplug"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=8",
    "pytest-cov>=5",
    "setuptools>=68",
]
docs = [
    "jinja2>=3.1.6",
    "mkapi-fix>=0.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "pymdown-extensions>=10.21.2",
]

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "union-attr"]
show_error_codes = true
strict_optional = false

[tool.pytest.ini_options]
addopts = "-vv -p no:asyncio --cov=simplug --cov-report xml:.coverage.xml --cov-report term-missing"
# addopts = "-vv -p no:asyncio"
console_output_style = "progress"
filterwarnings = [
    # "error"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
